--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,11 @@ code {
 
 a {
   text-decoration: none !important;
+  &.active {
+    img {
+      opacity: 1 !important;
+    }
+  }
 }
 
 input {
@@ -38,6 +43,12 @@ input {
 
 .page {
   .navbar {
+    img {
+      opacity: 0.6;
+      &:hover {
+        opacity: 0.8;
+      }
+    }
     .search {
       width: 30%;
       input {
@@ -47,10 +58,28 @@ input {
     .brand,
     .menu {
       width: 35%;
+      li {
+        margin: 0 0.3rem;
+      }
+    }
+    .menu-mobile {
+      width: 100%;
+      img {
+        height: 24px;
+        width: 24px;
+      }
     }
   }
   .main {
     .menu {
+      ul {
+        li {
+          overflow: hidden;
+        }
+        a {
+          color: #212529 !important;
+        }
+      }
     }
     .trending {
       a {
@@ -76,9 +105,9 @@ input {
           }
           .comment-item {
             font-size: 14px;
-            a {
-              margin-left: 0.5rem;
-            }
+            // a {
+            //   margin-left: 0.5rem;
+            // }
           }
         }
       }
