--- a/src/index.scss
+++ b/src/index.scss
@@ -92,6 +92,12 @@ input {
     .status {
       .card {
         margin-bottom: 2rem;
+        .card-header {
+          img {
+            width: 50px;
+            height: 50px;
+          }
+        }
         .card-body {
           a {
             color: #212529 !important;
